--- a/notebooks/AdversarialTraining.ipynb
+++ b/notebooks/AdversarialTraining.ipynb
@@ -19,8 +19,7 @@
     "import numpy as np\n",
     "import time\n",
     "import torch\n",
-    "import torchattacks\n",
-    "from torchattacks import *\n",
+    "from torch import nn\n",
     "from tqdm import tqdm\n",
     "import random\n",
     "import sys\n",
@@ -28,22 +27,28 @@
     "# allow imports when running script from within project dir\n",
     "[sys.path.append(i) for i in ['.', '..']]\n",
     "\n",
-    "# garbage collection from previous runs\n",
-    "import gc\n",
-    "gc.collect()\n",
-    "torch.cuda.empty_cache()\n",
-    "\n",
     "# local\n",
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
-    "from src.model.dino import get_dino\n",
+    "from src.model.dino_model import get_dino\n",
     "from src.model.data import create_loader\n",
+    "from src.model.eval import validate_network\n",
     "\n",
     "# seed\n",
     "SEED = 42\n",
     "random.seed(SEED)\n",
-    "gc.collect()\n",
     "torch.manual_seed(SEED)\n",
-    "np.random.seed(SEED)"
+    "np.random.seed(SEED)\n",
+    "\n",
+    "username = getpass.getuser()\n",
+    "DATA_PATH = Path('/','cluster', 'scratch', username, 'dl_data')\n",
+    "\n",
+    "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
+    "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
+    "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
+    "\n",
+    "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
+    "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
+    "ORI_IMAGES_PATH = Path(ORI_PATH,'images')"
    ]
   },
   {
