--- a/notebooks/AdversarialTraining.ipynb
+++ b/notebooks/AdversarialTraining.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,12 @@
     "from src.model.data import create_loader\n",
     "from src.model.eval import validate_network\n",
     "\n",
+    "# Custom imports\n",
+    "import torchattacks\n",
+    "from torchattacks import *\n",
+    "import torch.optim as optim\n",
+    "from torchvision import transforms as pth_transforms\n",
+    "\n",
     "# seed\n",
     "SEED = 42\n",
     "random.seed(SEED)\n",
@@ -40,11 +46,7 @@
     "np.random.seed(SEED)\n",
     "\n",
     "username = getpass.getuser()\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', username, 'dl_data')\n",
-    "\n",
-    "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
-    "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
-    "DN_IMAGES_PATH = Path(DN_PATH, 'images')\n",
+    "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "\n",
     "ORI_PATH = Path(DATA_PATH, 'ori_data')\n",
     "ORI_LABEL_PATH = Path(ORI_PATH,'correct_labels.txt')\n",
@@ -53,16 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = getpass.getuser()\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', username, 'dl_data')\n",
-    "ORG_LABEL_PATH = Path(DATA_PATH, 'correct_labels.txt')\n",
-    "ORIGINAL_IMAGES_PATH = Path(DATA_PATH,'ori_data','ImageNetClasses')\n",
-    "\n",
-    "INDEX_SUBSET = get_random_indexes()\n",
+    "CLASS_SUBSET = get_random_classes()\n",
     "\n",
     "BATCH_SIZE = 1\n",
     "\n",
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please use the `--pretrained_weights` argument to indicate the path of the checkpoint to evaluate.\n",
+      "Since no pretrained weights have been provided, we load the reference pretrained DINO weights.\n",
+      "Model vit_small built.\n",
+      "We load the reference pretrained linear weights.\n"
+     ]
+    }
+   ],
    "source": [
-    "model = get_dino()"
+    "model, base_linear_classifier = get_dino()"
    ]
   },
   {
@@ -104,11 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "org_loader = create_loader(ORIGINAL_IMAGES_PATH, ORG_LABEL_PATH, INDEX_SUBSET, BATCH_SIZE)"
+    "ori_loader = create_loader(ORI_IMAGES_PATH, ORI_LABEL_PATH, None, CLASS_SUBSET, BATCH_SIZE, is_adv_training=True)\n",
+    "test_loader = ori_loader # TODO"
    ]
   },
   {
@@ -119,27 +128,142 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "\n",
-    "train_attack = PGD(model, eps=0.3, alpha=0.1, steps=12)"
+    "#### Define a custom linear classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define and load pretrained weights for linear classifier on ImageNet\n",
+    "from torch import nn\n",
+    "class LinearClassifier(nn.Module):\n",
+    "    \"\"\"Linear layer to train on top of frozen features\"\"\"\n",
+    "    def __init__(self, dim, num_labels=1000, hidden_size=512):\n",
+    "        super(LinearClassifier, self).__init__()\n",
+    "        self.num_labels = num_labels\n",
+    "        self.linear = nn.Linear(dim, hidden_size) \n",
+    "        self.linear2 = nn.Linear(hidden_size, num_labels) \n",
+    "        self.linear.weight.data.normal_(mean=0.0, std=0.01)\n",
+    "        self.linear.bias.data.zero_()\n",
+    "        self.linear2.weight.data.normal_(mean=0.0, std=0.01)\n",
+    "        self.linear2.bias.data.zero_()\n",
+    "\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # flatten\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "\n",
+    "        # linear layer\n",
+    "        x = self.relu(self.linear(x))\n",
+    "        return self.linear2(x)\n",
+    "\n",
+    "linear_classifier = LinearClassifier(base_linear_classifier.linear.in_features, num_labels=len(CLASS_SUBSET))\n",
+    "linear_classifier = linear_classifier.cuda()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create custom Torch wrapper for the model so that it can be passsed to the library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ViTModel(torch.nn.Module):\n",
+    "    def __init__(self, vits16, linear_layer):\n",
+    "        \"\"\"\n",
+    "        In the constructor we instantiate two nn.Linear modules and assign them as\n",
+    "        member variables.\n",
+    "        \"\"\"\n",
+    "        super(ViTModel, self).__init__()\n",
+    "        self.vits16=vits16\n",
+    "        self.linear_layer=linear_layer\n",
+    "        self.transform = transform = pth_transforms.Compose([\n",
+    "            pth_transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
+    "        ])\n",
+    "        \n",
+    "        self.vits16.eval()\n",
+    "\n",
+    "    def forward(self, x, grad=True):\n",
+    "        \"\"\"\n",
+    "        In the forward function we accept a Tensor of input data and we must return\n",
+    "        a Tensor of output data. We can use Modules defined in the constructor as\n",
+    "        well as arbitrary operators on Tensors.\n",
+    "        \"\"\"\n",
+    "        if grad is False:\n",
+    "          with torch.no_grad():\n",
+    "            x = self.transform(x)\n",
+    "            \n",
+    "            # forward\n",
+    "            intermediate_output = self.vits16.get_intermediate_layers(x, 4)\n",
+    "            output = torch.cat([x[:, 0] for x in intermediate_output], dim=-1)\n",
+    "            output = linear_classifier(output)\n",
+    "            return output\n",
+    "        else:\n",
+    "          x = self.transform(x)\n",
+    "            \n",
+    "          # forward\n",
+    "          intermediate_output = self.vits16.get_intermediate_layers(x, 4)\n",
+    "          output = torch.cat([x[:, 0] for x in intermediate_output], dim=-1)\n",
+    "          output = linear_classifier(output)\n",
+    "          return output\n",
+    "\n",
+    "    def set_weights_for_training(self):\n",
+    "      self.linear_layer.train()\n",
+    "    \n",
+    "    def set_weights_for_testing(self):\n",
+    "      self.linear_layer.eval() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_model = ViTModel(model, linear_classifier)\n",
+    "train_model.set_weights_for_training()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adversarial training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define attack used for adversarial training\n",
+    "train_attack = PGD(model, eps=16, alpha=1, steps=15) # Hyperparameters from Section 5 https://arxiv.org/pdf/1812.03411.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training configuration\n",
     "NUM_EPOCHS = 5\n",
-    "model.linear_layer.train()\n",
     "loss = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.linear_layer.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(train_model.linear_layer.parameters(), lr=0.001)"
    ]
   },
   {
@@ -150,41 +274,43 @@
    "source": [
     "for epoch in range(NUM_EPOCHS):\n",
     "    \n",
-    "    for i, (batch_images, batch_labels, _) in enumerate(train_loader):\n",
+    "    for i, (batch_images, batch_labels, _) in enumerate(ori_loader):\n",
     "        \n",
-    "        X = train_attack(batch_images, batch_labels).cuda()\n",
-    "        Y = batch_labels.cuda()\n",
+    "        X = train_attack(batch_images, batch_labels).to(DEVICE)\n",
+    "        Y = batch_labels.to(DEVICE)\n",
     "\n",
-    "        predictions = model(X)\n",
+    "        predictions = train_model(X)\n",
     "        cost = loss(predictions, Y)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        cost.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        if i%25 == 0:\n",
-    "          print(f'Epoch [{epoch+1}/{NUM_EPOCHS}], batch [{i+1}/{len(train_loader)}], Loss: {cost.item()}')\n",
+    "        if (i+1)%25 == 0:\n",
+    "          print(f'Epoch [{epoch+1}/{NUM_EPOCHS}], batch [{i+1}/{len(ori_loader)}], Loss: {cost.item()}')\n",
+    "          train_model.set_weights_for_testing()\n",
     "\n",
     "          # Test accuracy for clean samples\n",
     "          correct_clean = 0\n",
     "          correct_adv = 0\n",
     "\n",
     "          for j, (imgs, labels, _) in enumerate(test_loader):\n",
-    "            imgs = imgs.to(device)\n",
-    "            labels = labels.to(device)\n",
-    "            predictions = model(imgs, False)\n",
+    "            imgs = imgs.to(DEVICE)\n",
+    "            labels = labels.to(DEVICE)\n",
+    "            predictions = train_model(imgs, False)\n",
     "            correct_clean += torch.sum(torch.eq(predictions.argmax(1), labels))\n",
     "\n",
     "            adv_samples = train_attack(imgs, labels).cuda()\n",
-    "            predictions = model(adv_samples, False)\n",
+    "            predictions = train_model(adv_samples, False)\n",
     "            correct_adv += torch.sum(torch.eq(predictions.argmax(1), labels))\n",
     "\n",
     "          del imgs\n",
     "          del labels\n",
     "          del adv_samples\n",
     "\n",
-    "          print(f\"Clean accuracy [{correct_clean}/{len(val_set)}] = {correct_clean/len(val_set)}\")\n",
-    "          print(f\"Adversarial accuracy [{correct_adv}/{len(val_set)}] = {correct_adv/len(val_set)}\\n\")"
+    "          print(f\"Clean accuracy [{correct_clean}/{len(test_loader.dataset)}] = {correct_clean/len(test_loader.dataset)}\")\n",
+    "          print(f\"Adversarial accuracy [{correct_adv}/{len(test_loader.dataset)}] = {correct_adv/len(test_loader.dataset)}\\n\")\n",
+    "          train_model.set_weights_for_training()"
    ]
   }
  ],
