--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -40,7 +40,7 @@
     "np.random.seed(SEED)\n",
     "\n",
     "username = getpass.getuser()\n",
-    "DATA_PATH = Path('/','cluster', 'scratch', username, 'dl_data')\n",
+    "DATA_PATH = Path('/','cluster', 'scratch', 'thobauma', 'dl_data')\n",
     "\n",
     "DN_PATH = Path(DATA_PATH, 'damageNet')\n",
     "DN_LABEL_PATH = Path(DN_PATH, 'val_damagenet.txt')\n",
@@ -57,7 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If CLASS_SUBSET is specified, INDEX_SUBSET will be ignored. Set CLASS_SUBSET=None if you want to use indexes.\n",
     "INDEX_SUBSET = get_random_indexes()\n",
+    "CLASS_SUBSET = get_random_classes()\n",
     "\n",
     "BATCH_SIZE = 1\n",
     "\n",
@@ -103,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ori_loader = create_loader(ORI_IMAGES_PATH, ORI_LABEL_PATH, INDEX_SUBSET, BATCH_SIZE)"
+    "ori_loader = create_loader(ORI_IMAGES_PATH, ORI_LABEL_PATH, INDEX_SUBSET, CLASS_SUBSET, BATCH_SIZE)"
    ]
   },
   {
@@ -112,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dn_loader = create_loader(DN_IMAGES_PATH, DN_LABEL_PATH, INDEX_SUBSET, BATCH_SIZE)"
+    "dn_loader = create_loader(DN_IMAGES_PATH, DN_LABEL_PATH, INDEX_SUBSET, CLASS_SUBSET, BATCH_SIZE)"
    ]
   }
  ],
