enable autoreload ext

--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,9 @@
     "\n",
     "# allow imports when running script from within project dir\n",
     "[sys.path.append(i) for i in ['.', '..']]\n",
+    "\n",
+    "# This extension reloads external Python files\n",
+    "%load_ext autoreload\n",
     "\n",
     "# local\n",
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
