weird ordering of loader....

--- a/notebooks/attack_classifier.ipynb
+++ b/notebooks/attack_classifier.ipynb
@@ -153,7 +153,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "9NTVkBDdm-kH"
+    "id": "9NTVkBDdm-kH",
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
    },
    "source": [
     "# Visualize attention\n",
@@ -168,6 +172,7 @@
      "base_uri": "https://localhost:8080/",
      "height": 374
     },
+    "collapsed": true,
     "executionInfo": {
      "elapsed": 322,
      "status": "error",
@@ -180,7 +185,12 @@
      "user_tz": -60
     },
     "id": "c8plFR_unCgC",
-    "outputId": "1bb6b826-886c-4f4a-bb98-d0761e0193b9"
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "outputId": "1bb6b826-886c-4f4a-bb98-d0761e0193b9",
+    "tags": []
    },
    "outputs": [
     {
@@ -352,7 +362,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "jpSNtu9DouKx"
+    "id": "jpSNtu9DouKx",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -423,6 +434,7 @@
      "base_uri": "https://localhost:8080/",
      "height": 415
     },
+    "collapsed": true,
     "executionInfo": {
      "elapsed": 39361,
      "status": "error",
@@ -435,7 +447,12 @@
      "user_tz": -60
     },
     "id": "TwcG1CzqlwGO",
-    "outputId": "9687b1c8-9c6d-4ef0-c002-81053cd022d9"
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "outputId": "9687b1c8-9c6d-4ef0-c002-81053cd022d9",
+    "tags": []
    },
    "outputs": [
     {
