posthoc data generation

--- a/notebooks/posthoc.ipynb
+++ b/notebooks/posthoc.ipynb
@@ -23,7 +23,6 @@
    "outputs": [],
    "source": [
     "# This extension reloads external Python files\n",
-    "%load_ext autoreload\n",
     "import os\n",
     "from pathlib import Path\n",
     "import getpass\n",
@@ -73,6 +72,8 @@
     "# If CLASS_SUBSET is specified, INDEX_SUBSET will be ignored. Set CLASS_SUBSET=None if you want to use indexes.\n",
     "INDEX_SUBSET = get_random_indexes()\n",
     "CLASS_SUBSET = get_random_classes()\n",
+    "INDEX_SUBSET = None\n",
+    "CLASS_SUBSET = None\n",
     "\n",
     "BATCH_SIZE = 1\n",
     "\n",
@@ -164,7 +165,6 @@
     "def generate_model_output(inp, n=4):\n",
     "    inp = inp.to(\"cuda\")\n",
     "    inp = inp.unsqueeze(dim=0)\n",
-    "    print(inp.shape)\n",
     "    intermediate_output = model.get_intermediate_layers(inp, n)\n",
     "    return torch.cat([x[:, 0] for x in intermediate_output], dim=-1)"
    ]
@@ -178,37 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "org_name: ILSVRC2012_val_00000007.JPEG, adv_name: ILSVRC2012_val_00000007.png\n",
-      "tuple 1/1000torch.Size([1, 3, 224, 224])\n",
-      "torch.Size([1, 3, 224, 224])\n",
-      "org_name: ILSVRC2012_val_00000011.JPEG, adv_name: ILSVRC2012_val_00000011.png\n",
-      "org_name: ILSVRC2012_val_00000019.JPEG, adv_name: ILSVRC2012_val_00000019.png\n",
-      "org_name: ILSVRC2012_val_00000021.JPEG, adv_name: ILSVRC2012_val_00000021.png\n",
-      "tuple 2/1000torch.Size([1, 3, 224, 224])\n",
-      "torch.Size([1, 3, 224, 224])\n",
-      "org_name: ILSVRC2012_val_00000093.JPEG, adv_name: ILSVRC2012_val_00000093.png\n",
-      "tuple 3/1000torch.Size([1, 3, 224, 224])\n",
-      "torch.Size([1, 3, 224, 224])\n",
-      "org_name: ILSVRC2012_val_00000098.JPEG, adv_name: ILSVRC2012_val_00000098.png\n",
-      "tuple 4/1000torch.Size([1, 3, 224, 224])\n",
-      "torch.Size([1, 3, 224, 224])\n",
-      "org_name: ILSVRC2012_val_00000104.JPEG, adv_name: ILSVRC2012_val_00000104.png\n",
-      "org_name: ILSVRC2012_val_00000114.JPEG, adv_name: ILSVRC2012_val_00000114.png\n",
-      "tuple 5/1000torch.Size([1, 3, 224, 224])\n",
-      "torch.Size([1, 3, 224, 224])\n",
-      "org_name: ILSVRC2012_val_00000117.JPEG, adv_name: ILSVRC2012_val_00000148.png\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Numbers are not matching: org=ILSVRC2012_val_00000117.JPEG, adv=ILSVRC2012_val_00000148.png",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-a2ff1f1f2300>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m   \u001b[0mnum\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m   \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"\\rtuple {i+1}/{total}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m   \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/AADefDINO/src/model/data.py\u001b[0m in \u001b[0;36madv_dataset\u001b[0;34m(org_loader, adv_loader, model, linear_classifier, n)\u001b[0m\n\u001b[1;32m    157\u001b[0m       \u001b[0morg_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0morg_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.JPEG'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m       \u001b[0madv_num\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madv_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 159\u001b[0;31m       \u001b[0;32massert\u001b[0m \u001b[0morg_num\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0madv_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"Numbers are not matching: org={org_name}, adv={adv_name}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    160\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0morg_correct\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0madv_correct\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Numbers are not matching: org=ILSVRC2012_val_00000117.JPEG, adv=ILSVRC2012_val_00000148.png"
+      "tuple 1000/1000"
      ]
     }
    ],
@@ -239,20 +209,6 @@
     "\n",
     "  # folders for org and adv, filename: {org, adv}/<original number>.pt (leave out prefix)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
