remove unused code

--- a/notebooks/posthoc.ipynb
+++ b/notebooks/posthoc.ipynb
@@ -202,12 +202,7 @@
     "  # add one dimension to input image (get_last_selfattention expects it)\n",
     "\n",
     "  org_out = generate_model_output(org)\n",
-    "  adv_out = generate_model_output(adv)\n",
-    "  \n",
-    "  #torch.save(org_out, ORG_OUT_PATH + f\"{num}.pt\")\n",
-    "  #torch.save(adv_out, ADV_OUT_PATH + f\"{num}.pt\")\n",
-    "\n",
-    "  # folders for org and adv, filename: {org, adv}/<original number>.pt (leave out prefix)"
+    "  adv_out = generate_model_output(adv)"
    ]
   }
  ],
