ViTWrapper and modifications for ViT/B

--- a/notebooks/AdversarialTraining.ipynb
+++ b/notebooks/AdversarialTraining.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "# local\n",
     "from src.helpers.helpers import get_random_indexes, get_random_classes\n",
-    "from src.model.dino_model import get_dino\n",
+    "from src.model.dino_model import get_dino, ViTWrapper\n",
     "from src.model.data import create_loader\n",
     "from src.model.eval import validate_network\n",
     "\n",
@@ -37,7 +37,6 @@
     "import torchattacks\n",
     "from torchattacks import *\n",
     "import torch.optim as optim\n",
-    "from torchvision import transforms as pth_transforms\n",
     "\n",
     "# seed\n",
     "SEED = 42\n",
@@ -177,63 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ViTModel(torch.nn.Module):\n",
-    "    def __init__(self, vits16, linear_layer):\n",
-    "        \"\"\"\n",
-    "        In the constructor we instantiate two nn.Linear modules and assign them as\n",
-    "        member variables.\n",
-    "        \"\"\"\n",
-    "        super(ViTModel, self).__init__()\n",
-    "        self.vits16=vits16\n",
-    "        self.linear_layer=linear_layer\n",
-    "        self.transform = transform = pth_transforms.Compose([\n",
-    "            pth_transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
-    "        ])\n",
-    "        \n",
-    "        self.vits16.eval()\n",
-    "\n",
-    "    def forward(self, x, grad=True):\n",
-    "        \"\"\"\n",
-    "        In the forward function we accept a Tensor of input data and we must return\n",
-    "        a Tensor of output data. We can use Modules defined in the constructor as\n",
-    "        well as arbitrary operators on Tensors.\n",
-    "        \"\"\"\n",
-    "        if grad is False:\n",
-    "          with torch.no_grad():\n",
-    "            x = self.transform(x)\n",
-    "            \n",
-    "            # forward\n",
-    "            intermediate_output = self.vits16.get_intermediate_layers(x, 4)\n",
-    "            output = torch.cat([x[:, 0] for x in intermediate_output], dim=-1)\n",
-    "            output = linear_classifier(output)\n",
-    "            return output\n",
-    "        else:\n",
-    "          x = self.transform(x)\n",
-    "            \n",
-    "          # forward\n",
-    "          intermediate_output = self.vits16.get_intermediate_layers(x, 4)\n",
-    "          output = torch.cat([x[:, 0] for x in intermediate_output], dim=-1)\n",
-    "          output = linear_classifier(output)\n",
-    "          return output\n",
-    "\n",
-    "    def set_weights_for_training(self):\n",
-    "      self.linear_layer.train()\n",
-    "    \n",
-    "    def set_weights_for_testing(self):\n",
-    "      self.linear_layer.eval() "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_model = ViTModel(model, linear_classifier)\n",
+    "train_model = ViTWrapper(model, linear_classifier)\n",
     "train_model.set_weights_for_training()"
    ]
   },
