Removed no_grad from wrapper

--- a/notebooks/AdversarialTraining.ipynb
+++ b/notebooks/AdversarialTraining.ipynb
@@ -244,11 +244,15 @@
     "          for j, (imgs, labels, _) in enumerate(test_loader):\n",
     "            imgs = imgs.to(DEVICE)\n",
     "            labels = labels.to(DEVICE)\n",
-    "            predictions = train_model(imgs, False)\n",
+    "            \n",
+    "            with torch.no_grad():\n",
+    "                predictions = train_model(imgs)\n",
     "            correct_clean += torch.sum(torch.eq(predictions.argmax(1), labels))\n",
     "\n",
     "            adv_samples = train_attack(imgs, labels).cuda()\n",
-    "            predictions = train_model(adv_samples, False)\n",
+    "            \n",
+    "            with torch.no_grad():\n",
+    "                predictions = train_model(adv_samples, False)\n",
     "            correct_adv += torch.sum(torch.eq(predictions.argmax(1), labels))\n",
     "\n",
     "          del imgs\n",
